src/grammar/TypeScriptParser.cpp

// Generated from TypeScriptParser.g4 by ANTLR 4.8


#include "TypeScriptParserListener.h"
#include "TypeScriptParserVisitor.h"

#include "TypeScriptParser.h"


using namespace antlrcpp;
using namespace antlr4;

TypeScriptParser::TypeScriptParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

TypeScriptParser::~TypeScriptParser() {
  delete _interpreter;
}

std::string TypeScriptParser::getGrammarFileName() const {
  return "TypeScriptParser.g4";
}

const std::vector<std::string>& TypeScriptParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& TypeScriptParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

TypeScriptParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TypeScriptParser::ProgramContext::EOF() {
  return getToken(TypeScriptParser::EOF, 0);
}

tree::TerminalNode* TypeScriptParser::ProgramContext::HashBangLine() {
  return getToken(TypeScriptParser::HashBangLine, 0);
}

TypeScriptParser::StatementListContext* TypeScriptParser::ProgramContext::statementList() {
  return getRuleContext<TypeScriptParser::StatementListContext>(0);
}


size_t TypeScriptParser::ProgramContext::getRuleIndex() const {
  return TypeScriptParser::RuleProgram;
}

void TypeScriptParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TypeScriptParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void TypeScriptParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TypeScriptParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any TypeScriptParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TypeScriptParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

TypeScriptParser::ProgramContext* TypeScriptParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, TypeScriptParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(157);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == TypeScriptParser::HashBangLine) {
      setState(156);
      match(TypeScriptParser::HashBangLine);
    }
    setState(160);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TypeScriptParser::RegularExpressionLiteral)
      | (1ULL << TypeScriptParser::OpenBracket)
      | (1ULL << TypeScriptParser::OpenParen)
      | (1ULL << TypeScriptParser::OpenBrace)
      | (1ULL << TypeScriptParser::SemiColon)
      | (1ULL << TypeScriptParser::PlusPlus)
      | (1ULL << TypeScriptParser::MinusMinus)
      | (1ULL << TypeScriptParser::Plus)
      | (1ULL << TypeScriptParser::Minus)
      | (1ULL << TypeScriptParser::BitNot)
      | (1ULL << TypeScriptParser::Not)
      | (1ULL << TypeScriptParser::NullLiteral)
      | (1ULL << TypeScriptParser::BooleanLiteral)
      | (1ULL << TypeScriptParser::DecimalLiteral))) != 0) || ((((_la - 71) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 71)) & ((1ULL << (TypeScriptParser::HexIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::OctalIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::OctalIntegerLiteral2 - 71))
      | (1ULL << (TypeScriptParser::BinaryIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::BigHexIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::BigOctalIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::BigBinaryIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::BigDecimalIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::Break - 71))
      | (1ULL << (TypeScriptParser::Do - 71))
      | (1ULL << (TypeScriptParser::Typeof - 71))
      | (1ULL << (TypeScriptParser::New - 71))
      | (1ULL << (TypeScriptParser::Var - 71))
      | (1ULL << (TypeScriptParser::Return - 71))
      | (1ULL << (TypeScriptParser::Void - 71))
      | (1ULL << (TypeScriptParser::Continue - 71))
      | (1ULL << (TypeScriptParser::For - 71))
      | (1ULL << (TypeScriptParser::Switch - 71))
      | (1ULL << (TypeScriptParser::While - 71))
      | (1ULL << (TypeScriptParser::Debugger - 71))
      | (1ULL << (TypeScriptParser::Function - 71))
      | (1ULL << (TypeScriptParser::This - 71))
      | (1ULL << (TypeScriptParser::With - 71))
      | (1ULL << (TypeScriptParser::If - 71))
      | (1ULL << (TypeScriptParser::Throw - 71))
      | (1ULL << (TypeScriptParser::Delete - 71))
      | (1ULL << (TypeScriptParser::Try - 71))
      | (1ULL << (TypeScriptParser::Class - 71))
      | (1ULL << (TypeScriptParser::Super - 71))
      | (1ULL << (TypeScriptParser::Const - 71))
      | (1ULL << (TypeScriptParser::Export - 71))
      | (1ULL << (TypeScriptParser::Import - 71))
      | (1ULL << (TypeScriptParser::Async - 71))
      | (1ULL << (TypeScriptParser::Await - 71))
      | (1ULL << (TypeScriptParser::Let - 71))
      | (1ULL << (TypeScriptParser::Static - 71))
      | (1ULL << (TypeScriptParser::Final - 71))
      | (1ULL << (TypeScriptParser::Yield - 71))
      | (1ULL << (TypeScriptParser::Identifier - 71))
      | (1ULL << (TypeScriptParser::StringLiteral - 71))
      | (1ULL << (TypeScriptParser::TemplateStringLiteral - 71)))) != 0)) {
      setState(159);
      statementList();
    }
    setState(162);
    match(TypeScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementListContext ------------------------------------------------------------------

TypeScriptParser::StatementListContext::StatementListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TypeScriptParser::StatementContext *> TypeScriptParser::StatementListContext::statement() {
  return getRuleContexts<TypeScriptParser::StatementContext>();
}

TypeScriptParser::StatementContext* TypeScriptParser::StatementListContext::statement(size_t i) {
  return getRuleContext<TypeScriptParser::StatementContext>(i);
}


size_t TypeScriptParser::StatementListContext::getRuleIndex() const {
  return TypeScriptParser::RuleStatementList;
}

void TypeScriptParser::StatementListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TypeScriptParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatementList(this);
}

void TypeScriptParser::StatementListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TypeScriptParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatementList(this);
}


antlrcpp::Any TypeScriptParser::StatementListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TypeScriptParserVisitor*>(visitor))
    return parserVisitor->visitStatementList(this);
  else
    return visitor->visitChildren(this);
}

TypeScriptParser::StatementListContext* TypeScriptParser::statementList() {
  StatementListContext *_localctx = _tracker.createInstance<StatementListContext>(_ctx, getState());
  enterRule(_localctx, 2, TypeScriptParser::RuleStatementList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(165); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(164);
      statement();
      setState(167); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TypeScriptParser::RegularExpressionLiteral)
      | (1ULL << TypeScriptParser::OpenBracket)
      | (1ULL << TypeScriptParser::OpenParen)
      | (1ULL << TypeScriptParser::OpenBrace)
      | (1ULL << TypeScriptParser::SemiColon)
      | (1ULL << TypeScriptParser::PlusPlus)
      | (1ULL << TypeScriptParser::MinusMinus)
      | (1ULL << TypeScriptParser::Plus)
      | (1ULL << TypeScriptParser::Minus)
      | (1ULL << TypeScriptParser::BitNot)
      | (1ULL << TypeScriptParser::Not)
      | (1ULL << TypeScriptParser::NullLiteral)
      | (1ULL << TypeScriptParser::BooleanLiteral)
      | (1ULL << TypeScriptParser::DecimalLiteral))) != 0) || ((((_la - 71) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 71)) & ((1ULL << (TypeScriptParser::HexIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::OctalIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::OctalIntegerLiteral2 - 71))
      | (1ULL << (TypeScriptParser::BinaryIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::BigHexIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::BigOctalIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::BigBinaryIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::BigDecimalIntegerLiteral - 71))
      | (1ULL << (TypeScriptParser::Break - 71))
      | (1ULL << (TypeScriptParser::Do - 71))
      | (1ULL << (TypeScriptParser::Typeof - 71))
      | (1ULL << (TypeScriptParser::New - 71))
      | (1ULL << (TypeScriptParser::Var - 71))
      | (1ULL << (TypeScriptParser::Return - 71))
      | (1ULL << (TypeScriptParser::Void - 71))
      | (1ULL << (TypeScriptParser::Continue - 71))
      | (1ULL << (TypeScriptParser::For - 71))
      | (1ULL << (TypeScriptParser::Switch - 71))
      | (1ULL << (TypeScriptParser::While - 71))
      | (1ULL << (TypeScriptParser::Debugger - 71))
      | (1ULL << (TypeScriptParser::Function - 71))
      | (1ULL << (TypeScriptParser::This - 71))
      | (1ULL << (TypeScriptParser::With - 71))
      | (1ULL << (TypeScriptParser::If - 71))
      | (1ULL << (TypeScriptParser::Throw - 71))
      | (1ULL << (TypeScriptParser::Delete - 71))
      | (1ULL << (TypeScriptParser::Try - 71))
      | (1ULL << (TypeScriptParser::Class - 71))
      | (1ULL << (TypeScriptParser::Super - 71))
      | (1ULL << (TypeScriptParser::Const - 71))
      | (1ULL << (TypeScriptParser::Export - 71))
      | (1ULL << (TypeScriptParser::Import - 71))
      | (1ULL << (TypeScriptParser::Async - 71))
      | (1ULL << (TypeScriptParser::Await - 71))
      | (1ULL << (TypeScriptParser::Let - 71))
      | (1ULL << (TypeScriptParser::Static - 71))
      | (1ULL << (TypeScriptParser::Final - 71))
      | (1ULL << (TypeScriptParser::Yield - 71))
      | (1ULL << (TypeScriptParser::Identifier - 71))
      | (1ULL << (TypeScriptParser::StringLiteral - 71))
      | (1ULL << (TypeScriptParser::TemplateStringLiteral - 71)))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

TypeScriptParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TypeScriptParser::BlockContext* TypeScriptParser::StatementContext::block() {
  return getRuleContext<TypeScriptParser::BlockContext>(0);
}

TypeScriptParser::VariableStatementContext* TypeScriptParser::StatementContext::variableStatement() {
  return getRuleContext<TypeScriptParser::VariableStatementContext>(0);
}

TypeScriptParser::ImportStatementContext* TypeScriptParser::StatementContext::importStatement() {
  return getRuleContext<TypeScriptParser::ImportStatementContext>(0);
}

TypeScriptParser::ExportStatementContext* TypeScriptParser::StatementContext::exportStatement() {
  return getRuleContext<TypeScriptParser::ExportStatementContext>(0);
}

TypeScriptParser::EmptyStatementContext* TypeScriptParser::StatementContext::emptyStatement() {
  return getRuleContext<TypeScriptParser::EmptyStatementContext>(0);
}

TypeScriptParser::ClassDeclarationContext* TypeScriptParser::StatementContext::classDeclaration() {
  return getRuleContext<TypeScriptParser::ClassDeclarationContext>(0);
}

TypeScriptParser::ExpressionStatementContext* TypeScriptParser::StatementContext::expressionStatement() {
  return getRuleContext<TypeScriptParser::ExpressionStatementContext>(0);
}

TypeScriptParser::IfStatementContext* TypeScriptParser::StatementContext::ifStatement() {
  return getRuleContext<TypeScriptParser::IfStatementContext>(0);
}

TypeScriptParser::IterationStatementContext* TypeScriptParser::StatementContext::iterationStatement() {
  return getRuleContext<TypeScriptParser::IterationStatementContext>(0);
}

TypeScriptParser::ContinueStatementContext* TypeScriptParser::StatementContext::continueStatement() {
  return getRuleContext<TypeScriptParser::ContinueStatementContext>(0);
}

TypeScriptParser::BreakStatementContext* TypeScriptParser::StatementContext::breakStatement() {
  return getRuleContext<TypeScriptParser::BreakStatementContext>(0);
}

TypeScriptParser::ReturnStatementContext* TypeScriptParser::StatementContext::returnStatement() {
  return getRuleContext<TypeScriptParser::ReturnStatementContext>(0);
}

TypeScriptParser::YieldStatementContext* TypeScriptParser::StatementContext::yieldStatement() {
  return getRuleContext<TypeScriptParser::YieldStatementContext>(0);
}

TypeScriptParser::WithStatementContext* TypeScriptParser::StatementContext::withStatement() {
  return getRuleContext<TypeScriptParser::WithStatementContext>(0);
}

TypeScriptParser::LabelledStatementContext* TypeScriptParser::StatementContext::labelledStatement() {
  return getRuleContext<TypeScriptParser::LabelledStatementContext>(0);
}

TypeScriptParser::SwitchStatementContext* TypeScriptParser::StatementContext::switchStatement() {
  return getRuleContext<TypeScriptParser::SwitchStatementContext>(0);
}

TypeScriptParser::ThrowStatementContext* TypeScriptParser::StatementContext::throwStatement() {
  return getRuleContext<TypeScriptParser::ThrowStatementContext>(0);
}

TypeScriptParser::TryStatementContext* TypeScriptParser::StatementContext::tryStatement() {
  return getRuleContext<TypeScriptParser::TryStatementContext>(0);
}

TypeScriptParser::DebuggerStatementContext* TypeScriptParser::StatementContext::debuggerStatement() {
  return getRuleContext<TypeScriptParser::DebuggerStatementContext>(0);
}

TypeScriptParser::FunctionDeclarationContext* TypeScriptParser::StatementContext::functionDeclaration() {
  return getRuleContext<TypeScriptParser::FunctionDeclarationContext>(0);
}


size_t TypeScriptParser::StatementContext::getRuleIndex() const {
  return TypeScriptParser::RuleStatement;
}

void TypeScriptParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TypeScriptParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void TypeScriptParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TypeScriptParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any TypeScriptParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TypeScriptParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

TypeScriptParser::StatementContext* TypeScriptParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, TypeScriptParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(189);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(169);
      block();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(170);
      variableStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(171);
      importStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(172);
      exportStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(173);
      emptyStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(174);
      classDeclaration();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(175);
      expressionStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(176);
      ifStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(177);
      iterationStatement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(178);
      continueStatement();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(179);
      breakStatement();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(180);
      returnStatement();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(181);
      yieldStatement();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(182);
      withStatement();
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(183);
      labelledStatement();
      break;
    }

    case 16: {
      enterOuterAlt(_localctx, 16);
      setState(184);
      switchStatement();
      break;
    }

    case 17: {
      enterOuterAlt(_localctx, 17);
      setState(185);
      throwStatement();
      break;
    }

    case 18: {
      enterOuterAlt(_localctx, 18);
      setState(186);
      tryStatement();
      break;
    }

    case 19: {
      enterOuterAlt(_localctx, 19);
      setState(187);
      debuggerStatement();
      break;
    }

    case 20: {
      enterOuterAlt(_localctx, 20);
      setState(188);
      functionDeclaration();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeSignContext ------------------------------------------------------------------

TypeScriptParser::TypeSignContext::TypeSignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TypeScriptParser::TypeSignContext::Colon() {
  return getToken(TypeScriptParser::Colon, 0);
}

TypeScriptParser::PrimaryTypeContext* TypeScriptParser::TypeSignContext::primaryType() {
  return getRuleContext<TypeScriptParser::PrimaryTypeContext>(0);
}


size_t TypeScriptParser::TypeSignContext::getRuleIndex() const {
  return TypeScriptParser::RuleTypeSign;
}

void TypeScriptParser::TypeSignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TypeScriptParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeSign(this);
}

void TypeScriptParser::TypeSignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TypeScriptParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeSign(this);
}


antlrcpp::Any TypeScriptParser::TypeSignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TypeScriptParserVisitor*>(visitor))
    return parserVisitor->visitTypeSign(this);
  else
    return visitor->visitChildren(this);
}

TypeScriptParser::TypeSignContext* TypeScriptParser::typeSign() {
  TypeSignContext *_localctx = _tracker.createInstance<TypeSignContext>(_ctx, getState());
  enterRule(_localctx, 6, TypeScriptParser::RuleTypeSign);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(191);
    match(TypeScriptParser::Colon);
    setState(192);
    primaryType();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimaryTypeContext ------------------------------------------------------------------

TypeScriptParser::PrimaryTypeContext::PrimaryTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TypeScriptParser::PredefinedTypeContext* TypeScriptParser::PrimaryTypeContext::predefinedType() {
  return getRuleContext<TypeScriptParser::PredefinedTypeContext>(0);
}
